log
Wed, Apr 16, 2025  8:48:57 AM: 
 hashmap.c | 18 ++++++++++++++++++
 1 file changed, 18 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:58:28: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
         nuevoMapa->current = NULL;
                            ^
cc1.exe: all warnings being treated as errors
eeef3b7
Wed, Apr 16, 2025  8:52:57 AM: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:58:28: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
         nuevoMapa->current = NULL;
                            ^
cc1.exe: all warnings being treated as errors
3d09577
Wed, Apr 16, 2025  8:53:04 AM: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:24: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     nuevoMapa->current = NULL;
                        ^
cc1.exe: all warnings being treated as errors
8052a82
Wed, Apr 16, 2025  8:55:58 AM: 
 hashmap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:57:24: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
     nuevoMapa->current = NULL;
                        ^
cc1.exe: all warnings being treated as errors
e162143
Wed, Apr 16, 2025  8:58:18 AM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
21b9134
